# zen-whisper

./: .gitignore  CHANGELOG.md  Makefile  README.md  pyproject.toml
.agents/skills/my-skill-changelog/: SKILL.md
.github/: FUNDING.yml
docs/plans/: 2026-03-08-premium-redesign-design.md
packaging/: make_deb.sh  postinst  postrm  zenwhisper.desktop
src/zenwhisper/: main.py
src/zenwhisper/core/: audio_feedback.py  config.py  downloader.py  engine.py  hotkey.py  recorder.py  translator.py  typer.py
src/zenwhisper/ui/: analyst.py  base.py  hub.py  styles.py  waveform.py  windows.py
