[project]
name = "zenwhisper"
version = "0.1.0"
description = "Premium private voice dictation for Linux"
readme = "README.md"
authors = [{ name = "Antigravity", email = "antigravity@example.com" }]
requires-python = ">=3.10"
dependencies = [
    "PyQt6>=6.6.1",
    "faster-whisper>=1.0.1",
    "pynput>=1.7.6",
    "pydub>=0.25.1",
    "httpx>=0.27.0",
    "sounddevice>=0.4.6",
    "numpy>=1.26.4",
]

[project.scripts]
zenwhisper = "zenwhisper.main:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
